Project4/Parse/MiniJavaParser.java
/* MiniJavaParser.java */
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
  package Parse;
  import java.util.LinkedList;
  public class MiniJavaParser implements MiniJavaParserConstants {

/********************/
/* MiniJava Grammar */
/********************/

// MainClass 	::= 	"class" Identifier "{" "public" "static" "void" "main" "(" "String" "[" "]" Identifier ")" "{" Statement "}" "}"
  static final public Absyn.ClassDecl MainClassDeclaration(LinkedList<Absyn.Absyn> cl) throws ParseException {Absyn.ClassDecl  cd;
 Absyn.Stmt stmt;
 Absyn.VarDecl var;
 Token name, arg;
 LinkedList<Absyn.MethodDecl> methods = new LinkedList<Absyn.MethodDecl>();
 LinkedList<Absyn.Formal> formals     = new LinkedList<Absyn.Formal>();
 LinkedList<Absyn.VarDecl> locals     = new LinkedList<Absyn.VarDecl>();
 LinkedList<Absyn.Stmt> stmts         = new LinkedList<Absyn.Stmt>();
    jj_consume_token(8);
    name = jj_consume_token(ID);
    jj_consume_token(22);
    jj_consume_token(9);
    jj_consume_token(10);
    jj_consume_token(18);
    jj_consume_token(30);
    jj_consume_token(24);
    jj_consume_token(31);
    jj_consume_token(26);
    jj_consume_token(27);
    arg = jj_consume_token(ID);
    jj_consume_token(25);
formals.add(new Absyn.Formal(
   new Absyn.ArrayType(
    new Absyn.IdentifierType("String")),
     arg.toString()));
    jj_consume_token(22);
    label_1:
    while (true) {
      if (jj_2_1(2147483647)) {
        ;
      } else {
        break label_1;
      }
      var = VarDeclaration();
locals.add(var);
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 11:
      case 12:
      case 22:
      case 33:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_2;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    jj_consume_token(23);
    jj_consume_token(23);
methods.add(new Absyn.MethodDecl(null, false, "main", formals,
    locals, stmts, new Absyn.IntegerLiteral(0)));
  cd = new Absyn.ClassDecl(name.toString(),
      null,
      new LinkedList<Absyn.VarDecl>(), methods);
  cl.add(cd);
  {if ("" != null) return cd;}
    throw new Error("Missing return statement in function");
}

// VarDeclaration 	::= 	Type Identifier ( = Expression )? ";"
  static final public Absyn.VarDecl VarDeclaration() throws ParseException {Absyn.Type type = null;
 Token      name = null;
 Absyn.Expr init = null;
    type = Type();
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 52:{
      jj_consume_token(52);
      init = Expression();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(28);
{if ("" != null) return new Absyn.VarDecl(type, name.toString(), init);}
    throw new Error("Missing return statement in function");
}

// Field Decleration Type <ID> ";"
  static final public Absyn.VarDecl FieldDeclaration() throws ParseException {Absyn.Type type;
 Token name;
    type = Type();
    name = jj_consume_token(ID);
    jj_consume_token(28);
{if ("" != null) return new Absyn.VarDecl(type, name.toString(), null);}
    throw new Error("Missing return statement in function");
}

// MethodDeclaration ::= "public" ("synchronized")? Type <ID> "(" (Type <ID> ("," Type <ID>)*)? ")"
//                        "{" (VarDeclaration)* (Statement)* "return" Expression ";" "}"
  static final public Absyn.MethodDecl MethodDeclaration() throws ParseException {boolean synced = false;
 Absyn.Type returnType, ptype;
 Token name, pname;
 LinkedList<Absyn.Formal> params  = new LinkedList<Absyn.Formal>();
 LinkedList<Absyn.VarDecl> locals = new LinkedList<Absyn.VarDecl>();
 LinkedList<Absyn.Stmt> stmts     = new LinkedList<Absyn.Stmt>();
 Absyn.VarDecl local;
 Absyn.Stmt stmt;
 Absyn.Expr returnVal;
    jj_consume_token(9);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 16:{
      jj_consume_token(16);
synced = true;
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    returnType = Type();
    name = jj_consume_token(ID);
    jj_consume_token(24);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 19:
    case 20:
    case ID:{
      ptype = Type();
      pname = jj_consume_token(ID);
params.add(new Absyn.Formal(ptype, pname.toString()));
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 29:{
          ;
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          break label_3;
        }
        jj_consume_token(29);
        ptype = Type();
        pname = jj_consume_token(ID);
params.add(new Absyn.Formal(ptype, pname.toString()));
      }
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    jj_consume_token(25);
    jj_consume_token(22);
    label_4:
    while (true) {
      if (jj_2_2(2147483647)) {
        ;
      } else {
        break label_4;
      }
      local = VarDeclaration();
locals.add(local);
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 11:
      case 12:
      case 22:
      case 33:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    jj_consume_token(17);
    returnVal = Expression();
    jj_consume_token(28);
    jj_consume_token(23);
{if ("" != null) return new Absyn.MethodDecl(returnType, synced, name.toString(), params, locals, stmts, returnVal);}
    throw new Error("Missing return statement in function");
}

// VoidDeclaration ::= "public" "void" <ID> "(" ")" "{" (VarDeclaration)* (Statement)* "}"
  static final public Absyn.VoidDecl VoidDeclaration() throws ParseException {Token name;
 LinkedList<Absyn.VarDecl> locals = new LinkedList<Absyn.VarDecl>();
 LinkedList<Absyn.Stmt> stmts     = new LinkedList<Absyn.Stmt>();
 Absyn.VarDecl local;
 Absyn.Stmt stmt;
    jj_consume_token(9);
    jj_consume_token(18);
    name = jj_consume_token(ID);
    jj_consume_token(24);
    jj_consume_token(25);
    jj_consume_token(22);
    label_6:
    while (true) {
      if (jj_2_3(2147483647)) {
        ;
      } else {
        break label_6;
      }
      local = VarDeclaration();
locals.add(local);
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 11:
      case 12:
      case 22:
      case 33:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_7;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    jj_consume_token(23);
{if ("" != null) return new Absyn.VoidDecl(name.toString(), locals, stmts);}
    throw new Error("Missing return statement in function");
}

// ClassDeclaration  ::= "class" <ID> ( "extends" <ID> )? "{" ( FieldDeclaration | MethodDeclaration )* "}"
// ThreadDeclaration ::= "class" <ID> "extends" "Thread" "{" ( FieldDeclaration | MethodDeclaration | VoidDeclaration )* "}"
  static final public Absyn.Absyn ClassOrThreadDeclaration() throws ParseException {Token name, parentId = null;
 LinkedList<Absyn.VarDecl> fields       = new LinkedList<Absyn.VarDecl>();
 LinkedList<Absyn.MethodDecl> methods   = new LinkedList<Absyn.MethodDecl>();
 LinkedList<Absyn.VoidDecl> voidMethods = new LinkedList<Absyn.VoidDecl>();
 Absyn.VarDecl field;
 Absyn.MethodDecl method;
 Absyn.VoidDecl vmethod;
    jj_consume_token(8);
    name = jj_consume_token(ID);
    if (jj_2_5(2147483647)) {
      jj_consume_token(37);
      jj_consume_token(32);
      jj_consume_token(22);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 9:
        case 19:
        case 20:
        case ID:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_8;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 19:
        case 20:
        case ID:{
          field = FieldDeclaration();
fields.add(field);
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          if (jj_2_4(2)) {
            vmethod = VoidDeclaration();
voidMethods.add(vmethod);
          } else {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case 9:{
              method = MethodDeclaration();
methods.add(method);
              break;
              }
            default:
              jj_la1[9] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      }
      jj_consume_token(23);
{if ("" != null) return new Absyn.ThreadDecl(name.toString(), fields, methods, voidMethods);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 22:
      case 37:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 37:{
          jj_consume_token(37);
          parentId = jj_consume_token(ID);
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          ;
        }
        jj_consume_token(22);
        label_9:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 9:
          case 19:
          case 20:
          case ID:{
            ;
            break;
            }
          default:
            jj_la1[11] = jj_gen;
            break label_9;
          }
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 19:
          case 20:
          case ID:{
            field = FieldDeclaration();
fields.add(field);
            break;
            }
          case 9:{
            method = MethodDeclaration();
methods.add(method);
            break;
            }
          default:
            jj_la1[12] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        jj_consume_token(23);
{if ("" != null) return new Absyn.ClassDecl(name.toString(),
               (parentId == null ? null : parentId.toString()), fields, methods);}
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
}

// Goal         ::=     MainClass ( ClassDeclaration | ThreadDeclaration )* <EOF>
  static final public Absyn.Program Goal() throws ParseException {LinkedList<Absyn.Absyn> cl = new LinkedList<Absyn.Absyn>();
        Absyn.Absyn decl;
    MainClassDeclaration(cl);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 8:{
        ;
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        break label_10;
      }
      decl = ClassOrThreadDeclaration();
cl.add(decl);
    }
    jj_consume_token(0);
{if ("" != null) return new Absyn.Program(cl);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Type Type() throws ParseException {Absyn.Type type;
    type = BaseType();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 26:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_11;
      }
      jj_consume_token(26);
      jj_consume_token(27);
type = new Absyn.ArrayType(type);
    }
{if ("" != null) return type;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Type BaseType() throws ParseException {Token name;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 19:{
      jj_consume_token(19);
{if ("" != null) return new Absyn.IntegerType();}
      break;
      }
    case 20:{
      jj_consume_token(20);
{if ("" != null) return new Absyn.BooleanType();}
      break;
      }
    case ID:{
      name = jj_consume_token(ID);
{if ("" != null) return new Absyn.IdentifierType(name.toString());}
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Stmt Statement() throws ParseException {Absyn.Stmt stmt;
 Absyn.AssignableExpr lhs;
 Absyn.Expr rhs;
 LinkedList <Absyn.Stmt> stmts = new LinkedList <Absyn.Stmt>();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 22:{
      jj_consume_token(22);
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 11:
        case 12:
        case 22:
        case 33:
        case ID:{
          ;
          break;
          }
        default:
          jj_la1[17] = jj_gen;
          break label_12;
        }
        stmt = Statement();
stmts.add(stmt);
      }
      jj_consume_token(23);
{if ("" != null) return new Absyn.BlockStmt(stmts);}
      break;
      }
    case 33:{
      stmt = XinuCallStatement();
{if ("" != null) return stmt;}
      break;
      }
    case 11:{
      stmt = IfState();
{if ("" != null) return stmt;}
      break;
      }
    case 12:{
      stmt = WhileState();
{if ("" != null) return stmt;}
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      if (jj_2_6(2147483647)) {
        lhs = AssignableExpr();
        jj_consume_token(52);
        rhs = Expression();
        jj_consume_token(28);
{if ("" != null) return new Absyn.AssignStmt(lhs, rhs);}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
}

  static final public Absyn.XinuCallStmt XinuCallStatement() throws ParseException {Token method;
 Absyn.Expr arg;
 LinkedList<Absyn.Expr> args = new LinkedList<Absyn.Expr>();
    jj_consume_token(33);
    jj_consume_token(21);
    method = jj_consume_token(ID);
    jj_consume_token(24);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 14:
    case 15:
    case 24:
    case 33:
    case 34:
    case 35:
    case 36:
    case INT:
    case STRING:
    case 41:
    case 50:
    case ID:{
      arg = Expression();
args.add(arg);
      label_13:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 29:{
          ;
          break;
          }
        default:
          jj_la1[19] = jj_gen;
          break label_13;
        }
        jj_consume_token(29);
        arg = Expression();
args.add(arg);
      }
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      ;
    }
    jj_consume_token(25);
    jj_consume_token(28);
{if ("" != null) return new Absyn.XinuCallStmt(method.toString(), args);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.AssignableExpr AssignableExpr() throws ParseException {Absyn.Expr e, arg;
 Token t, id;
    t = jj_consume_token(ID);
Absyn.Expr result = new Absyn.IdentifierExpr(t.toString());
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 21:
      case 26:{
        ;
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        break label_14;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 21:{
        jj_consume_token(21);
        id = jj_consume_token(ID);
result = new Absyn.FieldExpr(result, id.toString());
        break;
        }
      case 26:{
        jj_consume_token(26);
        arg = Expression();
        jj_consume_token(27);
result = new Absyn.ArrayExpr(result, arg);
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return (Absyn.AssignableExpr) result;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr Expression() throws ParseException {Absyn.Expr e;
    e = Or();
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr Or() throws ParseException {Absyn.Expr left, right;
    left = And();
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 49:{
        ;
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        break label_15;
      }
      jj_consume_token(49);
      right = And();
left = new Absyn.OrExpr(left,right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr And() throws ParseException {Absyn.Expr left, right;
    left = Equals();
    label_16:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 48:{
        ;
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        break label_16;
      }
      jj_consume_token(48);
      right = Equals();
left = new Absyn.AndExpr(left,right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr Equals() throws ParseException {Absyn.Expr left, right;
    left = Compare();
    label_17:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 46:
      case 47:{
        ;
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        break label_17;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 46:{
        jj_consume_token(46);
        right = Compare();
left = new Absyn.EqualExpr(left,right);
        break;
        }
      case 47:{
        jj_consume_token(47);
        right = Compare();
left = new Absyn.NotEqExpr(left,right);
        break;
        }
      default:
        jj_la1[26] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}
